--- a/index.html
+++ b/index.html
@@ -17,11 +17,21 @@
     <section class="active section">
       <div class="container">
         <h1 class="title active__title"> CSS Bayan</h1>
-        <ul class="accordion-list">
+        <ul class="accordion-list list__display">
+
           <li class="accordion__item">
-            <label class="accordion__title" for="first">You can't just copy and paste CSS
-              <span>
-                <button class="accordion__btn">&times</button>
+            <label class="accordion__title change__icon" for="first">You can't just copy and paste CSS
+              <span class="accordion__btn">
+                <button type="button" class=" open"><svg class="card__svg" width="16px" height="16px">
+                    <use href="./image/sprite.svg#icon-plus"></use>
+                  </svg>
+                </button>
+                <span class="accordion__btn">
+                  <button type="button" class="close"><svg class="card__svg" width="16px" height="16px">
+                      <use href="./image/sprite.svg#icon-close"></use>
+                    </svg>
+                  </button>
+                </span>
               </span>
             </label>
             <input type="radio" name="accordion" id="first" checked>
@@ -31,41 +41,53 @@
           </li>
 
           <li class="accordion__item">
-            <label class="accordion__title" for="second">You can't just copy and paste CSS
+            <label class="accordion__title" for="second">Keep calm and carry on
               <span>
-                <button class="accordion__btn">&times</button>
+                <button class="accordion__btn">
+                  <svg class="card__svg" width="16px" height="16px">
+                    <use href="./image/sprite.svg#icon-plus"></use>
+                  </svg>
+                </button>
               </span>
             </label>
             <input type="radio" name="accordion" id="second">
             <div class="content-accordion">
-              <img class="content-accordion-img-meme" src="./image/you-can.jpg" alt="meme_on-smile">
+              <img class="content-accordion-img-meme" src="./image/keep-calm-and-carry-on.jpg" alt="meme_on-smile">
             </div>
           </li>
+
           <li class="accordion__item">
-            <label class="accordion__title" for="third">You can't just copy and paste CSS
+            <label class="accordion__title" for="third">Work-life balance
               <span>
                 <button class="accordion__btn">&times</button>
               </span>
             </label>
             <input type="radio" name="accordion" id="third">
             <div class="content-accordion">
-              <img class="content-accordion-img-meme" src="./image/you-can.jpg" alt="meme_on-smile">
+              <img class="content-accordion-img-meme" src="./image/work-life-balance.jpg" alt="meme_on-smile">
             </div>
           </li>
+
           <li class="accordion__item">
-            <label class="accordion__title" for="footird">You can't just copy and paste CSS
+            <label class="accordion__title" for="footird">Relax and take it easy
               <span>
                 <button class="accordion__btn">&times</button>
               </span>
             </label>
             <input type="radio" name="accordion" id="footird" checked>
             <div class="content-accordion">
-              <img class="content-accordion-img-meme" src="./image/you-can.jpg" alt="meme_on-smile">
+              <img class="content-accordion-img-meme" src="./image/relax-and-take-it-easy.jpg" alt="meme_on-smile">
             </div>
           </li>
+
         </ul>
       </div>
-      <!-- <a href="#" class="mem-link">
+    </section>
+  </main>
+</body>
+
+</html>
+<!-- <a href="#" class="mem-link">
               <div class="mem-accordion">
                 <h3 class="card-title">You can't just copy and paste CSS</h3>
                 <button class="card__btn">
@@ -85,7 +107,7 @@
                 <img class="content-accordion-img-meme" src="./image/you-can.jpg" alt="meme_on-smile">
               </div>
             </a> -->
-      <!-- </li>
+<!-- </li>
           <li class="mem-item"> <a href="" class="mem-accordion">
               <h3 class="card-title">Keep calm and carry on</h3>
               <button class="card__btn">
@@ -115,9 +137,3 @@
           </li>
         </ul>
       </div> -->
-
-    </section>
-  </main>
-</body>
-
-</html>
