feat: add functional to accordion 11.03 12:08 hover on card

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <section class="active section">
       <div class="container">
         <h1 class="title active__title"> CSS Bayan</h1>
-        <ul class="accordion-list list__display">
+        <ul class="accordion-list">
 
           <li class="accordion__item">
-            <label class="accordion__title change__icon" for="first">You can't just copy and paste CSS
+            <label class="accordion__title" for="first">You can't just copy and paste CSS
               <span class="accordion__btn">
                 <button type="button" class=" open"><svg class="card__svg" width="16px" height="16px">
                     <use href="./image/sprite.svg#icon-plus"></use>
@@ -85,7 +85,6 @@
     </section>
   </main>
 </body>
-
 </html>
 <!-- <a href="#" class="mem-link">
               <div class="mem-accordion">
