feat: add color on the active item-title blue 13 37

--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
         <ul class="accordion-list">
 
           <li class="accordion__item">
+            <input class="input" type="radio" name="accordion" id="first" checked>
+
             <label class="accordion__title" for="first">You can't just copy and paste CSS
               <span class="accordion__btn">
-                <button type="button" class=" open"><svg class="card__svg" width="16px" height="16px">
+                <button type="button" class="open"><svg class="card__svg" width="16px" height="16px">
                     <use href="./image/sprite.svg#icon-plus"></use>
                   </svg>
                 </button>
@@ -34,13 +36,14 @@
                 </span>
               </span>
             </label>
-            <input type="radio" name="accordion" id="first" checked>
             <div class="content-accordion">
               <img class="content-accordion__img-meme" src="./image/you-can.jpg" alt="meme_on-smile">
             </div>
           </li>
 
           <li class="accordion__item">
+            <input class="input" type="radio" name="accordion" id="second">
+
             <label class="accordion__title" for="second">Keep calm and carry on
               <span>
                 <button class="accordion__btn">
@@ -50,7 +53,6 @@
                 </button>
               </span>
             </label>
-            <input type="radio" name="accordion" id="second">
             <div class="content-accordion">
               <img class="content-accordion-img-meme" src="./image/keep-calm-and-carry-on.jpg" alt="meme_on-smile">
             </div>
@@ -62,7 +64,7 @@
                 <button class="accordion__btn">&times</button>
               </span>
             </label>
-            <input type="radio" name="accordion" id="third">
+            <input class="input" type="radio" name="accordion" id="third">
             <div class="content-accordion">
               <img class="content-accordion-img-meme" src="./image/work-life-balance.jpg" alt="meme_on-smile">
             </div>
@@ -74,7 +76,7 @@
                 <button class="accordion__btn">&times</button>
               </span>
             </label>
-            <input type="radio" name="accordion" id="footird" checked>
+            <input class="input" type="radio" name="accordion" id="footird" checked>
             <div class="content-accordion">
               <img class="content-accordion-img-meme" src="./image/relax-and-take-it-easy.jpg" alt="meme_on-smile">
             </div>
@@ -85,6 +87,7 @@
     </section>
   </main>
 </body>
+
 </html>
 <!-- <a href="#" class="mem-link">
               <div class="mem-accordion">
