--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </header>
   <main>
     <section class="active section">
-      <div class="container">
+      <div class="container active__background">
         <h1 class="title active__title"> CSS Bayan</h1>
         <ul class="accordion-list">
 
