feat: create btn open and close, and add hover and checked

--- a/index.html
+++ b/index.html
@@ -21,20 +21,22 @@
 
           <li class="accordion__item">
             <input class="input" type="checkbox" name="accordion" id="first" checked>
-
             <label class="accordion__title" for="first">You can't just copy and paste CSS
-              <span class="accordion__btn">
-                <button type="button" class="open"><svg class="card__svg" width="16px" height="16px">
+              <!-- <span class="accordion__btn">
+                <button type="button" class="open">
+                  <svg class="card__svg" width="16px" height="16px">
                     <use href="./image/sprite.svg#icon-plus"></use>
                   </svg>
                 </button>
-                <span class="accordion__btn">
-                  <button type="button" class="close"><svg class="card__svg" width="16px" height="16px">
-                      <use href="./image/sprite.svg#icon-close"></use>
-                    </svg>
-                  </button>
-                </span>
               </span>
+              <span class="accordion__btn">
+                <button type="button" class="close">
+                  <svg class="card__svg" width="16px" height="16px">
+                    <use href="./image/sprite.svg#icon-close"></use>
+                  </svg>
+                </button>
+              </span> -->
+
             </label>
             <div class="content-accordion">
               <img class="content-accordion__img-meme" src="./image/you-can.jpg" alt="meme_on-smile">
@@ -43,10 +45,9 @@
 
           <li class="accordion__item">
             <input class="input" type="checkbox" name="accordion" id="second">
-
             <label class="accordion__title" for="second">Keep calm and carry on
-              <span class="accordion__btn">
-                <button class="open">
+              <!-- <span class="accordion__btn">
+                <button type="button" class="open">
                   <svg class="card__svg" width="16px" height="16px">
                     <use href="./image/sprite.svg#icon-plus"></use>
                   </svg>
@@ -57,7 +58,7 @@
                     <use href="./image/sprite.svg#icon-close"></use>
                   </svg>
                 </button>
-              </span>
+              </span> -->
             </label>
             <div class="content-accordion">
               <img class="content-accordion__img-meme" src="./image/keep-calm-and-carry-on.jpg" alt="meme_on-smile">
@@ -67,10 +68,10 @@
           <li class="accordion__item">
             <input class="input" type="checkbox" name="accordion" id="third">
             <label class="accordion__title" for="third">Work-life balance
-              <span class="accordion__btn">
+              <!-- <span class="accordion__btn">
                 <button class="open">
                   <svg class="card__svg" width="16px" height="16px">
-                    <use href="./image/sprite.svg#icon-plus"></use>
+                    <use href="./sass/sprite.svg#icon-plus"></use>
                   </svg>
                 </button>
               </span>
@@ -79,7 +80,7 @@
                     <use href="./image/sprite.svg#icon-close"></use>
                   </svg>
                 </button>
-              </span>
+              </span> -->
             </label>
             <div class="content-accordion">
               <img class="content-accordion__img-meme" src="./image/work-life-balance.jpg" alt="meme_on-smile">
@@ -88,7 +89,7 @@
           <li class="accordion__item">
             <input class="input" type="checkbox" name="accordion" id="footird">
             <label class="accordion__title" for="footird">Relax and take it easy
-              <span class="accordion__btn">
+              <!-- <span class="accordion__btn">
                 <button class="open">
                   <svg class="card__svg" width="16px" height="16px">
                     <use href="./image/sprite.svg#icon-plus"></use>
@@ -100,7 +101,7 @@
                     <use href="./image/sprite.svg#icon-close"></use>
                   </svg>
                 </button>
-              </span>
+              </span> -->
             </label>
             <div class="content-accordion">
               <img class="content-accordion__img-meme" src="./image/relax-and-take-it-easy.jpg" alt="meme_on-smile">
