fix: change open on close wich transform: rotate(45deg)

--- a/index.html
+++ b/index.html
@@ -22,20 +22,14 @@
           <li class="accordion__item">
             <input class="input" type="checkbox" name="accordion" id="first" checked>
             <label class="accordion__title" for="first">You can't just copy and paste CSS
-              <!-- <span class="accordion__btn">
+              <span class="accordion__btn">
                 <button type="button" class="open">
                   <svg class="card__svg" width="16px" height="16px">
                     <use href="./image/sprite.svg#icon-plus"></use>
                   </svg>
                 </button>
               </span>
-              <span class="accordion__btn">
-                <button type="button" class="close">
-                  <svg class="card__svg" width="16px" height="16px">
-                    <use href="./image/sprite.svg#icon-close"></use>
-                  </svg>
-                </button>
-              </span> -->
+
 
             </label>
             <div class="content-accordion">
@@ -46,19 +40,14 @@
           <li class="accordion__item">
             <input class="input" type="checkbox" name="accordion" id="second">
             <label class="accordion__title" for="second">Keep calm and carry on
-              <!-- <span class="accordion__btn">
+              <span class="accordion__btn">
                 <button type="button" class="open">
                   <svg class="card__svg" width="16px" height="16px">
                     <use href="./image/sprite.svg#icon-plus"></use>
                   </svg>
                 </button>
               </span>
-              <span class="accordion__btn">
-                <button type="button" class="close"><svg class="card__svg" width="16px" height="16px">
-                    <use href="./image/sprite.svg#icon-close"></use>
-                  </svg>
-                </button>
-              </span> -->
+
             </label>
             <div class="content-accordion">
               <img class="content-accordion__img-meme" src="./image/keep-calm-and-carry-on.jpg" alt="meme_on-smile">
@@ -68,19 +57,14 @@
           <li class="accordion__item">
             <input class="input" type="checkbox" name="accordion" id="third">
             <label class="accordion__title" for="third">Work-life balance
-              <!-- <span class="accordion__btn">
+              <span class="accordion__btn">
                 <button class="open">
                   <svg class="card__svg" width="16px" height="16px">
-                    <use href="./sass/sprite.svg#icon-plus"></use>
+                    <use href="./image/sprite.svg#icon-plus"></use>
                   </svg>
                 </button>
               </span>
-              <span class="accordion__btn">
-                <button type="button" class="close"><svg class="card__svg" width="16px" height="16px">
-                    <use href="./image/sprite.svg#icon-close"></use>
-                  </svg>
-                </button>
-              </span> -->
+
             </label>
             <div class="content-accordion">
               <img class="content-accordion__img-meme" src="./image/work-life-balance.jpg" alt="meme_on-smile">
@@ -89,19 +73,14 @@
           <li class="accordion__item">
             <input class="input" type="checkbox" name="accordion" id="footird">
             <label class="accordion__title" for="footird">Relax and take it easy
-              <!-- <span class="accordion__btn">
+              <span class="accordion__btn">
                 <button class="open">
                   <svg class="card__svg" width="16px" height="16px">
                     <use href="./image/sprite.svg#icon-plus"></use>
                   </svg>
                 </button>
               </span>
-              <span class="accordion__btn">
-                <button type="button" class="close"><svg class="card__svg" width="16px" height="16px">
-                    <use href="./image/sprite.svg#icon-close"></use>
-                  </svg>
-                </button>
-              </span> -->
+
             </label>
             <div class="content-accordion">
               <img class="content-accordion__img-meme" src="./image/relax-and-take-it-easy.jpg" alt="meme_on-smile">
